# supernova

./: .gitignore  Cargo.toml  bacon.toml  pnpm-lock.yaml
app/: .oxfmtrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  index.tsx
public/: .gitignore
src/: index.rs  main.rs  secrets.rs
src/auth/: cookie.rs  mod.rs
supernova/: Cargo.toml  app.css  package.json  pnpm-lock.yaml
supernova/public/: notifications.js  service-worker.js
supernova/src/: index.html  index.rs  main.rs  notification.rs  secrets.rs
supernova/src/auth/: authenticated_user.rs  cookie.rs  mod.rs
supernova/templates/: index.html  layout.html
supernovi/: Cargo.toml
supernovi/src/: main.rs
templates/: index.html  layout.html  sign_in.html
web-shove/: Cargo.toml
web-shove/src/: authorization_header.rs  encrypted_content_encoding.rs  experiments.rs  lib.rs  main.rs  vapid.rs
