[package]
name = "supernova"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = [] }
axum-extra = { version = "0.9.6", features = ["cookie", "cookie-private"] }
base64 = "0.22.1"
bitwarden = "1.0.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
getrandom = { version = "0.2.15", features = ["custom"] }
libcrux-ecdh = "0.0.2-alpha.3"
libcrux-hkdf = "0.0.2-alpha.3"
libcrux-hmac = "0.0.2-alpha.3"
libsql = "0.6.0"
nanoid = "0.4.0"
p256 = { version = "0.13.2", features = ["ecdh"] }
postcard = { version = "1.1.0", features = ["alloc"], default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
ring = { version = "0.17.8", features = ["less-safe-getrandom-custom-or-rdrand"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.11.0"
