[package]
name = "supernova"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = [] }
axum-extra = { version = "0.12.6", features = ["cookie-private"] }
base64 = "0.22.1"
bitwarden = { version = "2.0.0", features = ["secrets"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
getrandom = "0.4.2"
libsql = "0.9.30"
mime = "0.3.17"
nanoid = "0.5.0"
postcard = { version = "1.1.0", features = ["alloc"], default-features = false }
reqwest = "0.13.2"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = "1.23.1"
web-shove = { path = "../web-shove" }
