[package]
name = "web-shove"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["heapless"] }
base64 = "0.22.1"
getrandom = "0.4.2"
heapless = "0.9.2"
http = "1.2.0"
josekit = "0.10.0"
jsonwebtoken = "10.3.0"
libcrux-ecdh = "0.0.6"
libcrux-hkdf = "0.0.6"
libcrux-hmac = "0.0.6"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand = "0.9"
rand_chacha = { version = "0.9", features = ["os_rng"] }
rand_core = { version = "0.9.0", features = ["os_rng"] }
ring = { version = "0.17.8", features = [
    "less-safe-getrandom-custom-or-rdrand",
] }
thiserror = "2.0.3"
time = "0.3.37"

[dev-dependencies]
rstest = "0.26.1"
